{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 27,
  "lineage": "f8beb29c-9090-919e-4cda-911c96c3904e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04870e3d3e6949454",
            "arn": "arn:aws:ec2:us-east-1:476114125164:elastic-ip/eipalloc-04870e3d3e6949454",
            "association_id": "eipassoc-0c2fc695089827793",
            "domain": "vpc",
            "id": "eipalloc-04870e3d3e6949454",
            "network_border_group": "us-east-1",
            "network_interface": "eni-053251a2e57f7d297",
            "private_dns": "ip-10-0-64-9.ec2.internal",
            "private_ip": "10.0.64.9",
            "public_dns": "ec2-34-204-210-104.compute-1.amazonaws.com",
            "public_ip": "34.204.210.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "03-cfl-EIP-NGW"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-EIP-NGW",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:internet-gateway/igw-0c912eebcd3af36a5",
            "id": "igw-0c912eebcd3af36a5",
            "owner_id": "476114125164",
            "tags": {
              "Name": "03-cfl-IGW-VPC-Main"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-IGW-VPC-Main",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04870e3d3e6949454",
            "association_id": "eipassoc-0c2fc695089827793",
            "connectivity_type": "public",
            "id": "nat-04b153c3a18b92e9e",
            "network_interface_id": "eni-053251a2e57f7d297",
            "private_ip": "10.0.64.9",
            "public_ip": "34.204.210.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da792943196b837b",
            "tags": {
              "Name": "03-cfl-NATGW-public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-NATGW-public",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            }
          },
          "dependencies": [
            "aws_eip.eip_egress",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:route-table/rtb-01e7975d72b40573e",
            "id": "rtb-01e7975d72b40573e",
            "owner_id": "476114125164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b153c3a18b92e9e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Managed": "terraform",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_egress",
            "aws_nat_gateway.ngw_public",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:route-table/rtb-00b09bb45283ceae7",
            "id": "rtb-00b09bb45283ceae7",
            "owner_id": "476114125164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b153c3a18b92e9e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Managed": "terraform",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_egress",
            "aws_nat_gateway.ngw_public",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:route-table/rtb-0b67f24806081c4d7",
            "id": "rtb-0b67f24806081c4d7",
            "owner_id": "476114125164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c912eebcd3af36a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Managed": "terraform",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:route-table/rtb-098c6f353f69e48e2",
            "id": "rtb-098c6f353f69e48e2",
            "owner_id": "476114125164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c912eebcd3af36a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Managed": "terraform",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c00bd585988b2528",
            "route_table_id": "rtb-01e7975d72b40573e",
            "subnet_id": "subnet-04d37891446c84f0f"
          },
          "dependencies": [
            "aws_eip.eip_egress",
            "aws_nat_gateway.ngw_public",
            "aws_route_table.rt_private_a",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0441c97995213f622",
            "route_table_id": "rtb-00b09bb45283ceae7",
            "subnet_id": "subnet-0939f5b7f9e10f674"
          },
          "dependencies": [
            "aws_eip.eip_egress",
            "aws_nat_gateway.ngw_public",
            "aws_route_table.rt_private_b",
            "aws_subnet.subnet_private_b",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0173fec108a3ba067",
            "route_table_id": "rtb-0b67f24806081c4d7",
            "subnet_id": "subnet-0da792943196b837b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091018afa207aeb62",
            "route_table_id": "rtb-098c6f353f69e48e2",
            "subnet_id": "subnet-03e563e3537f9f6a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:subnet/subnet-04d37891446c84f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d37891446c84f0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114125164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "03-cfl-subnet-priv-us-east-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-subnet-priv-us-east-1a",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:subnet/subnet-0939f5b7f9e10f674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0939f5b7f9e10f674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114125164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "03-cfl-subnet-priv-us-east-1b"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-subnet-priv-us-east-1b",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:subnet/subnet-0da792943196b837b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da792943196b837b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114125164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "03-cfl-subnet-pub-us-east-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-subnet-pub-us-east-1a",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:subnet/subnet-03e563e3537f9f6a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e563e3537f9f6a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114125164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "03-cfl-subnet-pub-us-east-1b"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-subnet-pub-us-east-1b",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            },
            "vpc_id": "vpc-0ad0e19a272736f34"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476114125164:vpc/vpc-0ad0e19a272736f34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064cac065ef601af7",
            "default_route_table_id": "rtb-0aa0c71048abb01c7",
            "default_security_group_id": "sg-0ddb753acee041bdf",
            "dhcp_options_id": "dopt-0f2e20193811619fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad0e19a272736f34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa0c71048abb01c7",
            "owner_id": "476114125164",
            "tags": {
              "Name": "03-cfl-vpc-cloudwise"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "03-cfl-vpc-cloudwise",
              "Owner": "cloud",
              "Project": "03-cfl-cloudwise",
              "terraform": "bootstrap"
            }
          }
        }
      ]
    }
  ]
}